--- a/src/components/PopUpWindow/popup-window.scss
+++ b/src/components/PopUpWindow/popup-window.scss
@@ -1,14 +1,38 @@
 @import "../../assets/stylesheets/var";
 
-.pop-up {
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
+.background-blur {
   position: fixed;
   left: 0;
   right: 0;
   top: 0;
-  margin: 0 auto;
-  z-index: 99;
-  overflow-y: scroll;
+  padding-top: 5%;
+  z-index: 98;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0, 0.3);
+  .pop-up {
+    width: 70%;
+    height: 80%;
+    background-color: $white;
+    border-radius: 10px;
+    margin: 0 auto;
+    z-index: 99;
+    overflow-y: scroll;
+
+    .worldmap-graph {
+      height: 100%;
+    }
+  }
+}
+
+$layout-breakpoint-small: 376px;
+$layout-breakpoint-tablet: 768px;
+
+@media only screen and (min-width: $layout-breakpoint-small) and (max-width: $layout-breakpoint-tablet) {
+  .background-blur {
+    .pop-up {
+      width: 70% !important;
+      height: 40% !important;
+    }
+  }
 }
